Perkin-UAT/force-app/main/default/objects/SMAX_PS_ProductSales__c/SMAX_PS_ProductSales__c.object-meta.xml
<CustomObject>
    <label>Product Sales</label>
    <nameField>
        <displayFormat>PSLS-{00000000}</displayFormat>
        <label>Product Sales Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Sales</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>