Perkin-UAT/force-app/main/default/objects/SMAX_PS_ProductSales__c/fields/SMAX_PS_Active__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Active__c</fullName>
    <formula>SMAX_PS_Product__r.IsActive</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>