Perkin-UAT/force-app/main/default/objects/SMAX_PS_ProductSales__c/fields/SMAX_PS_DistributionChannel__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_DistributionChannel__c</fullName>
    <label>Distribution Channel</label>
    <length>2</length>
    <type>Text</type>
</CustomField>