Perkin-UAT/force-app/main/default/objects/SMAX_PS_ProductSales__c/fields/SMAX_PS_IdForProductAttribute1__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_IdForProductAttribute1__c</fullName>
    <label>Id For Product Attribute1</label>
    <length>1</length>
    <type>Text</type>
</CustomField>