Perkin-UAT/force-app/main/default/objects/SMAX_PS_ProductSales__c/fields/SMAX_PS_MaterialGroup2__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_MaterialGroup2__c</fullName>
    <label>Material Group2</label>
    <length>3</length>
    <type>Text</type>
</CustomField>