Perkin-UAT/force-app/main/default/objects/SMAX_PS_ProductSales__c/fields/SMAX_PS_Part_Number__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Part_Number__c</fullName>
    <description>Displays the Part Number from the Product object</description>
    <formula>SMAX_PS_Product__r.Partnum__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Displays the Part Number from the Product object</inlineHelpText>
    <label>Part Number (Formula)</label>
    <type>Text</type>
</CustomField>