Perkin-UAT/force-app/main/default/objects/SMAX_PS_ProductSales__c/fields/SMAX_PS_PartDescription__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_PartDescription__c</fullName>
    <label>Part Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>