Perkin-UAT/force-app/main/default/objects/SMAX_PS_ProductSales__c/fields/SMAX_PS_PartNumber__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_PartNumber__c</fullName>
    <externalId>true</externalId>
    <label>Part Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>