Perkin-UAT/force-app/main/default/objects/SMAX_PS_ProductSales__c/fields/SMAX_PS_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Product_Name__c</fullName>
    <description>denotes name of product - used in sfm display</description>
    <formula>SMAX_PS_Product__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>denotes name of product - used in sfm display</inlineHelpText>
    <label>Product Name</label>
    <type>Text</type>
</CustomField>