Perkin-UAT/force-app/main/default/objects/SMAX_PS_ProductSales__c/fields/SMAX_PS_Product_Type__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Product_Type__c</fullName>
    <description>This custom formula field pulls the Product Type to the Product Sales page</description>
    <formula>TEXT(SMAX_PS_Product__r.SVMXC__Product_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This custom formula field pulls the Product Type to the Product Sales page</inlineHelpText>
    <label>Product Type (Formula)</label>
    <type>Text</type>
</CustomField>