Perkin-UAT/force-app/main/default/objects/SMAX_PS_ProductSales__c/fields/SMAX_PS_ProductHierarchy__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_ProductHierarchy__c</fullName>
    <label>Product Hierarchy</label>
    <length>18</length>
    <type>Text</type>
</CustomField>