Perkin-UAT/force-app/main/default/objects/SMAX_PS_ProductSales__c/fields/SMAX_PS_Sales_Unit_Code__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Sales_Unit_Code__c</fullName>
    <description>Used for Boomi and SAP integration only.</description>
    <inlineHelpText>Used for Boomi and SAP integration only.</inlineHelpText>
    <label>Sales Unit Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>