Perkin-UAT/force-app/main/default/objects/SMAX_PS_ProductSales__c/fields/SMAX_PS_SalesOrg__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_SalesOrg__c</fullName>
    <label>Sales Org</label>
    <length>4</length>
    <type>Text</type>
</CustomField>