Perkin-UAT/force-app/main/default/objects/SMAX_PS_ProductSales__c/fields/SMAX_PS_SAP_ActivityType__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_SAP_ActivityType__c</fullName>
    <label>SAP Activity Type</label>
    <length>6</length>
    <type>Text</type>
</CustomField>