Perkin-UAT/force-app/main/default/objects/SMAX_PS_ProductSales__c/fields/SMAX_PS_SAP_Deleted__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_SAP_Deleted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deletion Flag</label>
    <type>Checkbox</type>
</CustomField>