Perkin-UAT/force-app/main/default/objects/SMAX_PS_ProductSales__c/fields/SMAX_PS_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Unit_Price__c</fullName>
    <description>The default Unit Price of the Product in this Sales Org.  For use in Off-line Pricing.</description>
    <inlineHelpText>The default Unit Price of the Product in this Sales Org.  For use in Off-line Pricing.</inlineHelpText>
    <label>Unit Price</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>